moved contact section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="it">
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="description" content="My personal portfolio">
@@ -22,10 +22,9 @@
       <!-- navigation links -->
       <nav>
         <ul>
-          <li class="nav-link"><a href="#about-me">About me</a></li>
-          <li class="nav-link"><a href="#projects">Projects</a></li>
-          <li class="nav-link"><a href="#skills">Skills</a></li>
-          <li class="nav-link"><a href="#contacts">Contact</a></li>
+          <li class="nav-link" target="_blank"><a href="#about-me">About me</a></li>
+          <li class="nav-link" target="_blank"><a href="#skills">Skills</a></li>
+          <li class="nav-link" target="_blank"><a href="#projects">Projects</a></li>
         </ul>
       </nav>
     </header>
@@ -46,13 +45,17 @@
         </div>
         <aside>
           <img src="./IMG_20210425_133758.jpg" alt="profile photo">
-        </aside>
-      </section>
 
-      <!-- project section -->
-      <section id="projects">
-        <h2>Projects</h2>
-        <p>There are currently no available projects in this section</p>
+          <!-- contacts section -->
+          <section id="contacts">
+            <h2>Contacts</h2>
+            <div>
+              <a href="https://github.com/Fil-Ma"><i class="fa fa-github fa-lg"></i></a>
+              <a href="https://www.linkedin.com/in/filippo-mazzalai/"><i class="fa fa-linkedin-square fa-lg"></i></a>
+              <a href="#"><i class="fa fa-paper-plane fa-lg"></i></a>
+            </div>
+          </section>
+        </aside>
       </section>
 
       <!-- skills section -->
@@ -69,14 +72,10 @@
         </div>
       </section>
 
-      <!-- contacts section -->
-      <section id="contacts">
-        <h2>Contacts</h2>
-        <div>
-          <i class="fa fa-github fa-lg"></i>
-          <i class="fa fa-linkedin-square fa-lg"></i>
-          <i class="fa fa-paper-plane fa-lg"></i>
-        </div>
+      <!-- project section -->
+      <section id="projects">
+        <h2>Projects</h2>
+        <p>Currently there are no available projects in this section</p>
       </section>
 
     </main>
