removed screen resolution support

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="My personal portfolio">
     <meta name="author" content="Filippo Mazzalai">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Filippo Mazzalai</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -43,19 +44,17 @@
           <p>Now I decided to take the path of web developing with the help of <em>Code Academy</em> and start a new carrier to give my contribution
           in shaping the future of our world</p>
         </div>
+
+        <!-- aside with profile image, links to github and linkedin, email -->
         <aside>
           <img src="./IMG_20210425_133758.jpg" alt="profile photo">
-
-          <!-- contacts section -->
           <section id="contacts">
-            <h2>Contacts</h2>
-            <div>
-              <a href="https://github.com/Fil-Ma"><i class="fa fa-github fa-lg"></i></a>
-              <a href="https://www.linkedin.com/in/filippo-mazzalai/"><i class="fa fa-linkedin-square fa-lg"></i></a>
-              <a href="#"><i class="fa fa-paper-plane fa-lg"></i></a>
-            </div>
+            <a href="https://github.com/Fil-Ma"><i class="fa fa-github fa-lg"></i></a>
+            <a href="https://www.linkedin.com/in/filippo-mazzalai/"><i class="fa fa-linkedin-square fa-lg"></i></a>
+            <a href="#"><i class="fa fa-paper-plane fa-lg"></i></a>
           </section>
         </aside>
+
       </section>
 
       <!-- skills section -->
