--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Filippo Mazzalai</title>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Condensed&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/fontawesome-free-6.2.0-web/css/all.min.css">
+    <link href="./styles/style.css" rel="stylesheet" type="text/css">
     <script src="./main.js" defer></script>
-    <link href="./style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
 
@@ -47,10 +47,10 @@
 
         <!-- aside with profile image, links to github and linkedin, email -->
         <aside>
-          <img src="./IMG_20210425_133758.jpg" alt="profile photo">
+          <img src="./images/IMG_20210425_133758.jpg" alt="profile photo">
           <section id="contacts">
-            <a href="https://github.com/Fil-Ma"><i class="fa fa-github fa-lg"></i></a>
-            <a href="https://www.linkedin.com/in/filippo-mazzalai/"><i class="fa fa-linkedin-square fa-lg"></i></a>
+            <a href="https://github.com/Fil-Ma"><i class="fa-brands fa-github fa-lg"></i></a>
+            <a href="https://www.linkedin.com/in/filippo-mazzalai/"><i class="fa-brands fa-linkedin fa-lg"></i></i></a>
             <a href="#"><i class="fa fa-paper-plane fa-lg"></i></a>
           </section>
         </aside>
@@ -61,13 +61,13 @@
       <section id="skills">
         <h2>Skills</h2>
         <div class="icons">
-          <i class="fa fa-html5 fa-lg" aria-hidden="true"></i>
-          <i class="fa fa-css3 fa-lg" aria-hidden="true"></i>
-          <i class="fa fa-github fa-lg" aria-hidden="true"></i>
+          <i class="fa-brands fa-html5 fa-2xl"></i>
+          <i class="fa-brands fa-css3-alt fa-2xl"></i>
+          <i class="fa-brands fa-github fa-2xl"></i>
+          <i class="fa-brands fa-js fa-2xl"></i>
+          <i class="fa-brands fa-node-js fa-2xl"></i>
+          <i class="fa-brands fa-react fa-2xl"></i>
 
-          <i class="fa-brands fa-js"></i>
-          <i class="fa-brands fa-node-js"></i>
-          <i class="fa-brands fa-react"></i>
         </div>
       </section>
 
