resized skills section

--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
       <section id="skills">
         <h2>Skills</h2>
         <div class="icons">
-          <i class="fa-brands fa-html5 fa-2xl"></i>
-          <i class="fa-brands fa-css3-alt fa-2xl"></i>
-          <i class="fa-brands fa-github fa-2xl"></i>
-          <i class="fa-brands fa-js fa-2xl"></i>
-          <i class="fa-brands fa-node-js fa-2xl"></i>
-          <i class="fa-brands fa-react fa-2xl"></i>
+          <i class="fa-brands fa-html5 fa-xl"></i>
+          <i class="fa-brands fa-css3-alt fa-xl"></i>
+          <i class="fa-brands fa-github fa-xl"></i>
+          <i class="fa-brands fa-js fa-xl"></i>
+          <i class="fa-brands fa-node-js fa-xl"></i>
+          <i class="fa-brands fa-react fa-xl"></i>
 
         </div>
       </section>
