added hover text to icons

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       <!-- navigation links -->
       <nav>
         <ul>
-          <li class="nav-link" target="_blank"><a href="#about-me">About me</a></li>
-          <li class="nav-link" target="_blank"><a href="#skills">Skills</a></li>
-          <li class="nav-link" target="_blank"><a href="#projects">Projects</a></li>
+          <li class="nav-link"><a href="#about-me">About me</a></li>
+          <li class="nav-link"><a href="#skills">Skills</a></li>
+          <li class="nav-link"><a href="#projects">Projects</a></li>
         </ul>
       </nav>
     </header>
@@ -49,9 +49,9 @@
         <aside>
           <img src="./images/IMG_20210425_133758.jpg" alt="profile photo">
           <section id="contacts">
-            <a href="https://github.com/Fil-Ma"><i class="fa-brands fa-github fa-lg"></i></a>
-            <a href="https://www.linkedin.com/in/filippo-mazzalai/"><i class="fa-brands fa-linkedin fa-lg"></i></i></a>
-            <a href="#"><i class="fa fa-paper-plane fa-lg"></i></a>
+            <a href="https://github.com/Fil-Ma" target="_blank"><i class="fa-brands fa-github fa-lg"></i></a>
+            <a href="https://www.linkedin.com/in/filippo-mazzalai/" target="_blank"><i class="fa-brands fa-linkedin fa-lg"></i></i></a>
+            <a href="mailto:filippo.mazzalai@gmail.com"><i class="fa fa-paper-plane fa-lg"></i></a>
           </section>
         </aside>
 
@@ -60,14 +60,36 @@
       <!-- skills section -->
       <section id="skills">
         <h2>Skills</h2>
-        <div class="icons">
-          <i class="fa-brands fa-html5 fa-xl"></i>
-          <i class="fa-brands fa-css3-alt fa-xl"></i>
-          <i class="fa-brands fa-github fa-xl"></i>
-          <i class="fa-brands fa-js fa-xl"></i>
-          <i class="fa-brands fa-node-js fa-xl"></i>
-          <i class="fa-brands fa-react fa-xl"></i>
+        <div class="skills-icons-container">
+          <div class="icon-container">
+            <i class="fa-brands fa-html5 fa-xl"></i>
+            <div class="hover-text">HTML 5</div>
+          </div>
 
+          <div class="icon-container">
+            <i class="fa-brands fa-css3-alt fa-xl"></i>
+            <div class="hover-text">CSS</div>
+          </div>
+
+          <div class="icon-container">
+            <i class="fa-brands fa-github fa-xl"></i>
+            <div class="hover-text">github</div>
+          </div>
+
+          <div class="icon-container">
+            <i class="fa-brands fa-js fa-xl"></i>
+            <div class="hover-text">JavaScript</div>
+          </div>
+
+          <div class="icon-container">
+            <i class="fa-brands fa-node-js fa-xl"></i>
+            <div class="hover-text">Node JS</div>
+          </div>
+
+          <div class="icon-container">
+            <i class="fa-brands fa-react fa-xl"></i>
+            <div class="hover-text">React</div>
+          </div>
         </div>
       </section>
 
