--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Filippo Mazzalai</title>
 
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="./images/favicon/site.webmanifest">
+
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Condensed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/fontawesome-free-6.2.0-web/css/all.min.css">
     <link href="./styles/style.css" rel="stylesheet" type="text/css">
-    <script src="./main.js" defer></script>
+    <script src="./scripts/main.js" defer></script>
   </head>
   <body>
 
@@ -61,33 +66,33 @@
       <section id="skills">
         <h2>Skills</h2>
         <div class="skills-icons-container">
-          <div class="icon-container">
-            <i class="fa-brands fa-html5 fa-xl"></i>
+          <div class="icon-container first-icon">
+            <i class="fa-brands fa-html5 fa-2xl"></i>
             <div class="hover-text">HTML 5</div>
           </div>
 
           <div class="icon-container">
-            <i class="fa-brands fa-css3-alt fa-xl"></i>
+            <i class="fa-brands fa-css3-alt fa-2xl"></i>
             <div class="hover-text">CSS</div>
           </div>
 
           <div class="icon-container">
-            <i class="fa-brands fa-github fa-xl"></i>
+            <i class="fa-brands fa-github fa-2xl"></i>
             <div class="hover-text">github</div>
           </div>
 
           <div class="icon-container">
-            <i class="fa-brands fa-js fa-xl"></i>
+            <i class="fa-brands fa-js fa-2xl"></i>
             <div class="hover-text">JavaScript</div>
           </div>
 
           <div class="icon-container">
-            <i class="fa-brands fa-node-js fa-xl"></i>
+            <i class="fa-brands fa-node-js fa-2xl"></i>
             <div class="hover-text">Node JS</div>
           </div>
 
           <div class="icon-container">
-            <i class="fa-brands fa-react fa-xl"></i>
+            <i class="fa-brands fa-react fa-2xl"></i>
             <div class="hover-text">React</div>
           </div>
         </div>
