added opengraph metadata

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Filippo Mazzalai</title>
 
+    <!-- og graph metadata -->
+    <meta property="og:title" content="Filippo Mazzalai's personal portfolio" />
+    <meta property="og:type" content="portfolio" />
+    <meta property="og:url" content="https://fil-ma.github.io/"/>
+    <meta property="og:image" content="https://fil-ma.github.io/images/IMG_20210425_133758.jpg"/>
+    <meta property="og:site_name" content="filippomazzalai.me" />
+    <meta property="og:description" content="My personal portfolio" />
+
     <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png">
