--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <meta property="og:type" content="portfolio" />
     <meta property="og:url" content="https://fil-ma.github.io/"/>
     <meta property="og:image" content="https://fil-ma.github.io/images/IMG_20210425_133758.jpg"/>
+    <meta property="og:image:width" content="50"/>
+    <meta property="og:image:height" content="100"/>
     <meta property="og:site_name" content="filippomazzalai.me" />
     <meta property="og:description" content="My personal portfolio" />
 
