added opengraph metadata

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- og graph metadata -->
     <meta property="og:title" content="Filippo Mazzalai's personal portfolio" />
-    <meta property="og:type" content="portfolio" />
+    <meta property="og:type" content="article" />
     <meta property="og:url" content="https://fil-ma.github.io/"/>
     <meta property="og:image" content="https://fil-ma.github.io/images/IMG_20210425_133758.jpg"/>
     <meta property="og:image:width" content="50"/>
