--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Filippo Mazzalai</title>
 
     <!-- og graph metadata -->
-    <meta property="og:title" content="Filippo Mazzalai's personal portfolio" />
+    <meta property="og:title" content="Filippo Mazzalai" />
     <meta property="og:url" content="https://fil-ma.github.io/"/>
-    <meta property="og:image" content="https://fil-ma.github.io/images/IMG_20210425_133758.jpg"/>
+    <meta property="og:type" content="website" />
     <meta property="og:description" content="My personal portfolio" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png">
