updated site url

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- og graph metadata -->
     <meta property="og:title" content="Filippo Mazzalai" />
-    <meta property="og:url" content="https://fil-ma.github.io/"/>
+    <meta property="og:url" content="https://www.filippomazzalai.me/"/>
     <meta property="og:type" content="website" />
     <meta property="og:description" content="My personal portfolio" />
 
