fixed seo infos and favicon

--- a/index.html
+++ b/index.html
@@ -2,24 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="description" content="My personal portfolio">
+    <meta name="description" content="Web developer portfolio website. Full stack-developer specialized in Javascript, React and Node JS. Check about my projects, my skills and more.">
     <meta name="author" content="Filippo Mazzalai">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Filippo Mazzalai</title>
+    <title>Filippo Mazzalai: Full-Stack Website Developer</title>
 
     <!-- og graph metadata -->
-    <meta property="og:title" content="Filippo Mazzalai" />
+    <meta property="og:title" content="Filippo Mazzalai, web developer" />
     <meta property="og:url" content="https://www.filippomazzalai.me/"/>
     <meta property="og:type" content="website" />
     <meta property="og:description" content="My personal portfolio" />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png">
-    <link rel="manifest" href="./images/favicon/site.webmanifest">
+    <!-- favicon paths -->
+    <link rel="icon" type="image/x-icon" href="./images/favicon/favicon.ico">
+    <link rel="manifest" href="./manifest.json">
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Condensed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/fontawesome-free-6.2.0-web/css/all.min.css">
+    <link href="./styles/reset.css" rel="stylesheet" type="text/css">
     <link href="./styles/style.css" rel="stylesheet" type="text/css">
     <script src="./scripts/main.js" defer></script>
   </head>
