--- a/pages/projects.html
+++ b/pages/projects.html
@@ -27,6 +27,8 @@
     <link href="../styles/style.css" rel="stylesheet" type="text/css">
     <link href="../styles/projects.css" rel="stylesheet" type="text/css">
 
+    <!-- linking javascript -->
+    <script src="../scripts/main.js" defer></script>
   </head>
   <body>
 
@@ -43,6 +45,22 @@
           <li class="nav-link"><a href="./aboutme.html">About me</a></li>
         </ul>
       </nav>
+
+      <!-- mobile nav -->
+      <div class="hamburger">
+        <a href="javascript:void(0);" class="icon" onclick="handleClickHanburger()">
+          <i class="fa-solid fa-bars fa-2xl"></i>
+        </a>
+
+        <div id="hamburger-menu">
+          <a href="javascript:void(0);" class="close-icon" onclick="handleClickHanburger()">
+            <i class="fa-solid fa-xmark fa-2xl"></i>
+          </a>
+          <a href="../index.html" class="hamburger-link">Home</a>
+          <a href="./aboutme.html" class="hamburger-link">About me</a>
+        </div>
+
+      </div>
     </header>
 
     <!-- main content -->
@@ -90,20 +108,22 @@
 
     <!-- footer section -->
     <footer>
-      <div class="contacts">
-        <p>Feel free to contact me:</p>
-        <a href="mailto:filippo.mazzalai@gmail.com"><i class="fa fa-paper-plane fa-lg"></i> Email</a>
-        <a href="https://www.linkedin.com/in/filippo-mazzalai/" target="_blank"><i class="fa-brands fa-linkedin fa-lg"></i> Linkedin</a>
-      </div>
-
-      <div class="github-link">
-        <p>Visit my github repository to check <br> the source code of my projects:</p>
-        <a href="https://github.com/Fil-Ma" target="_blank"><i class="fa-brands fa-github fa-lg"></i> https://github.com/Fil-Ma</a>
-      </div>
-
       <div class="copyright">
         <i class="fa-regular fa-copyright"></i>
         <p>2022 Filippo Mazzalai</p>
+      </div>
+
+      <div class="footer-links-container">
+        <div class="contacts">
+          <p>Feel free to contact me:</p>
+          <a href="mailto:filippo.mazzalai@gmail.com"><i class="fa fa-paper-plane fa-lg"></i> Email</a>
+          <a href="https://www.linkedin.com/in/filippo-mazzalai/" target="_blank"><i class="fa-brands fa-linkedin fa-lg"></i> Linkedin</a>
+        </div>
+
+        <div class="github-link">
+          <p>Visit my github repository to check the source code of my projects:</p>
+          <a href="https://github.com/Fil-Ma" target="_blank"><i class="fa-brands fa-github fa-lg"></i> https://github.com/Fil-Ma</a>
+        </div>
       </div>
     </footer>
 
