--- a/index.html
+++ b/index.html
@@ -44,11 +44,27 @@
           <li class="nav-link"><a href="./pages/projects.html">Projects</a></li>
         </ul>
       </nav>
+
+      <!-- mobile nav -->
+      <div class="hamburger">
+        <a href="javascript:void(0);" class="icon" onclick="handleClickHanburger()">
+          <i class="fa-solid fa-bars fa-2xl"></i>
+        </a>
+
+        <div id="hamburger-menu">
+          <a href="javascript:void(0);" class="close-icon" onclick="handleClickHanburger()">
+            <i class="fa-solid fa-xmark fa-2xl"></i>
+          </a>
+          <a href="./pages/aboutme.html" class="hamburger-link">About me</a>
+          <a href="./pages/projects.html" class="hamburger-link">Projects</a>
+        </div>
+
+      </div>
     </header>
 
     <!-- main content -->
     <main>
-
+      <p>This page is currently under mantainance</p>
     </main>
 
   </body>
