--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- og graph metadata -->
     <meta property="og:title" content="Filippo Mazzalai, web developer" />
-    <meta property="og:url" content="https://www.filippomazzalai.me/"/>
+    <meta property="og:url" content="www.filippomazzalai.me"/>
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Full-Stack web developer, specialized in Javascript, React and Node JS" />
 
