--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -77,7 +77,7 @@
         <!-- about me description -->
         <div class="text-container">
           <h3>About Me</h3>
-          <p>Hi! My name is Filippo Mazzalai and I was born in Trento, a small city on the italian Alps. Since I was young I alweys loved
+          <p>Hi! My name is Filippo Mazzalai and I was born in Trento, a small city on the italian Alps. Since I was young I always loved
             technology, although the first time I started writing code was in University where I studied C and C++ languages. <br><br>
             I have then worked in a VoIP company as a system engineer on a web application written in Angular JS; even if I never wrote code
             for my latest job, I slowly approached HTML and CSS and I liked them a lot. <br> This year (2022) I decided to take a class on
