changed about me text

--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -81,8 +81,8 @@
             technology, although the first time I started writing code was in University where I studied C and C++ languages. <br><br>
             I have then worked in a VoIP company as a system engineer on a web application written in Angular JS; even if I never wrote code
             for my latest job, I slowly approached HTML and CSS and I liked them a lot. <br> This year (2022) I decided to take a class on
-            Full-Stack development with popular website Codecademy with which I learned all I know of Javascript and of best practices in
-            writing clean and DRY code.</p>
+            Codecademy in Full-Stack development where I have learned a lot on the subject, besides best practices, tools and major project
+            building abilities.</p>
         </div>
       </section>
 
