added project image

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -73,7 +73,7 @@
         <!-- project one: langnotes -->
         <div class="langnotes project">
           <div class="cover-container">
-            <img src="#" alt="LangNotes project"/>
+            <img src="../images/langnotes_home.png" alt="LangNotes project"/>
           </div>
 
           <div class="project-description">
