fixed image size

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -92,10 +92,10 @@
             <div class="description-container">
               <p>This application has been designed as a tool to support you learn a new language.
                 As the name itself suggests, LangNotes is a notebook for language learning, allowing
-                the user to insert lessons and vocabularies. <br /> <br /> Lessons can contain notes on some specific
+                the user to insert lessons and vocabularies.<br /> Lessons can contain notes on some specific
                 argument; for instance, in a French class I could have a Lesson called "Form of greetings"
                 that could contain the various examples (e.g. <em>Salut</em> - Hello, <em>Bon jour</em> -
-                Good morning, etc).<br /> <br />
+                Good morning, etc).<br />
                 The full application has been developed with PERN stack languages (PostgreSQL, Express,
                 React and NodeJS).</p>
             </div>
