--- a/pages/projects.html
+++ b/pages/projects.html
@@ -79,7 +79,11 @@
           <div class="project-description">
             <div class="project-title">
               <h3>LangNotes (2022)</h3>
-              <a href="https://github.com/Fil-Ma/langnotes" target="_blank">View on Github</a>
+              <a
+                class="project-link-extended"
+                href="https://github.com/Fil-Ma/langnotes"
+                target="_blank">View on Github</a>
+              <a class="project-link-icon" href="https://github.com/Fil-Ma/langnotes" target="_blank"><i class="fa-brands fa-github fa-lg"></i></a>
             </div>
 
             <div class="notice">
