fixed popup, added responsive

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -79,18 +79,19 @@
           <div class="project-description">
             <div class="project-title">
               <h3>LangNotes (2022)</h3>
-              <a
-                class="project-link-extended"
-                href="https://github.com/Fil-Ma/langnotes"
-                target="_blank">View on Github</a>
+              <a class="project-link-extended" href="https://github.com/Fil-Ma/langnotes" target="_blank">View on Github</a>
               <a class="project-link-icon" href="https://github.com/Fil-Ma/langnotes" target="_blank"><i class="fa-brands fa-github fa-lg"></i></a>
             </div>
 
             <div class="notice">
-              <p class="note">Personal portfolio project <i class="fa-solid fa-circle-exclamation fa-sm"></i></p>
-              <p class="note-popup">This project only purpose
-                is to display my skills and
-                knowledge in web development</p>
+              <p class="note">Personal portfolio project</p>
+
+              <div class="popup-container">
+                <i class="fa-solid fa-circle-exclamation fa-xs"></i>
+                <p class="note-popup">This project only purpose
+                  is to display my skills and
+                  knowledge in web development</p>
+              </div>
             </div>
 
             <div class="description-container">
