added todo list project, improved project container style

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -107,6 +107,41 @@
           </div>
         </div>
 
+        <!-- project two: langnotes -->
+        <div class="todo-list project">
+          <div class="cover-container">
+            <img src="../images/todo-list-main.png" alt="To Do List project"/>
+          </div>
+
+          <div class="project-description">
+            <div class="project-title">
+              <h3>To Do List (2022)</h3>
+              <a class="project-link-extended" href="https://github.com/Fil-Ma/todo-list" target="_blank">View on Github</a>
+              <a class="project-link-icon" href="https://github.com/Fil-Ma/todo-list" target="_blank"><i class="fa-brands fa-github fa-lg"></i></a>
+            </div>
+
+            <div class="notice">
+              <p class="note">Personal portfolio project</p>
+
+              <div class="popup-container">
+                <i class="fa-solid fa-circle-exclamation fa-xs"></i>
+                <p class="note-popup">This project only purpose
+                  is to display my skills and
+                  knowledge in web development</p>
+              </div>
+            </div>
+
+            <div class="description-container">
+              <p>Simple application that allows the user to save a list of task to do. The elements can be marked as done/undone, filtered 
+                or searched if the user needs to. The project uses React Framework and Redux JS to deliver a useful application.<br>
+              You can try the live demo at <a class="demo-link" href="https://symphonious-sprinkles-fb9009.netlify.app/" target="_blank">this link</a>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- other projects -->
+
       </div>
 
     </main>
