added chat app project section

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -107,7 +107,7 @@
           </div>
         </div>
 
-        <!-- project two: langnotes -->
+        <!-- project two: to do list -->
         <div class="todo-list project">
           <div class="cover-container">
             <img src="../images/todo-list-main.png" alt="To Do List project"/>
@@ -140,7 +140,38 @@
           </div>
         </div>
 
-        <!-- other projects -->
+        <!-- project three: chat app -->
+        <div class="chat-app project">
+          <div class="cover-container">
+            <img src="../images/chat_room.png" alt="chat app project"/>
+          </div>
+
+          <div class="project-description">
+            <div class="project-title">
+              <h3>Chat App (2022)</h3>
+              <a class="project-link-extended" href="https://github.com/Fil-Ma/chat-app" target="_blank">View on Github</a>
+              <a class="project-link-icon" href="https://github.com/Fil-Ma/chat-app" target="_blank"><i class="fa-brands fa-github fa-lg"></i></a>
+            </div>
+
+            <div class="notice">
+              <p class="note">Personal portfolio project</p>
+
+              <div class="popup-container">
+                <i class="fa-solid fa-circle-exclamation fa-xs"></i>
+                <p class="note-popup">This project only purpose
+                  is to display my skills and
+                  knowledge in web development</p>
+              </div>
+            </div>
+
+            <div class="description-container">
+              <p>This application provides an online chat room service for users. Anyone can login by inserting a username and by joining or creating 
+                a room. The project is fully developed in React with a websocket message service based on Socket.io library; an Express back end is used 
+                to manage system messages and room status.
+              </p>
+            </div>
+          </div>
+        </div>
 
       </div>
 
