rearranged projects'order

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -70,44 +70,7 @@
       <!-- project container -->
       <div class="projects-container">
 
-        <!-- project one: langnotes -->
-        <div class="langnotes project">
-          <div class="cover-container">
-            <img src="../images/langnotes_home.png" alt="LangNotes project"/>
-          </div>
-
-          <div class="project-description">
-            <div class="project-title">
-              <h3>LangNotes (2022)</h3>
-              <a class="project-link-extended" href="https://github.com/Fil-Ma/langnotes" target="_blank">View on Github</a>
-              <a class="project-link-icon" href="https://github.com/Fil-Ma/langnotes" target="_blank"><i class="fa-brands fa-github fa-lg"></i></a>
-            </div>
-
-            <div class="notice">
-              <p class="note">Personal portfolio project</p>
-
-              <div class="popup-container">
-                <i class="fa-solid fa-circle-exclamation fa-xs"></i>
-                <p class="note-popup">This project only purpose
-                  is to display my skills and
-                  knowledge in web development</p>
-              </div>
-            </div>
-
-            <div class="description-container">
-              <p>This application has been designed as a tool to support you learn a new language.
-                As the name itself suggests, LangNotes is a notebook for language learning, allowing
-                the user to insert lessons and vocabularies.<br /> Lessons can contain notes on some specific
-                argument; for instance, in a French class I could have a Lesson called "Form of greetings"
-                that could contain the various examples (e.g. <em>Salut</em> - Hello, <em>Bon jour</em> -
-                Good morning, etc).<br />
-                The full application has been developed with PERN stack languages (PostgreSQL, Express,
-                React and NodeJS).</p>
-            </div>
-          </div>
-        </div>
-
-        <!-- project two: to do list -->
+        <!-- project: to do list -->
         <div class="todo-list project">
           <div class="cover-container">
             <img src="../images/todo-list-main.png" alt="To Do List project"/>
@@ -140,7 +103,7 @@
           </div>
         </div>
 
-        <!-- project three: chat app -->
+        <!-- project: chat app -->
         <div class="chat-app project">
           <div class="cover-container">
             <img src="../images/chat_room.png" alt="chat app project"/>
@@ -169,6 +132,43 @@
                 a room. The project is fully developed in React with a websocket message service based on Socket.io library; an Express back end is used 
                 to manage system messages and room status.
               </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- project: langnotes -->
+        <div class="langnotes project">
+          <div class="cover-container">
+            <img src="../images/langnotes_home.png" alt="LangNotes project"/>
+          </div>
+
+          <div class="project-description">
+            <div class="project-title">
+              <h3>LangNotes (2022)</h3>
+              <a class="project-link-extended" href="https://github.com/Fil-Ma/langnotes" target="_blank">View on Github</a>
+              <a class="project-link-icon" href="https://github.com/Fil-Ma/langnotes" target="_blank"><i class="fa-brands fa-github fa-lg"></i></a>
+            </div>
+
+            <div class="notice">
+              <p class="note">Personal portfolio project</p>
+
+              <div class="popup-container">
+                <i class="fa-solid fa-circle-exclamation fa-xs"></i>
+                <p class="note-popup">This project only purpose
+                  is to display my skills and
+                  knowledge in web development</p>
+              </div>
+            </div>
+
+            <div class="description-container">
+              <p>This application has been designed as a tool to support you learn a new language.
+                As the name itself suggests, LangNotes is a notebook for language learning, allowing
+                the user to insert lessons and vocabularies.<br /> Lessons can contain notes on some specific
+                argument; for instance, in a French class I could have a Lesson called "Form of greetings"
+                that could contain the various examples (e.g. <em>Salut</em> - Hello, <em>Bon jour</em> -
+                Good morning, etc).<br />
+                The full application has been developed with PERN stack languages (PostgreSQL, Express,
+                React and NodeJS).</p>
             </div>
           </div>
         </div>
