--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -71,7 +71,7 @@
 
         <!-- profile image -->
         <div class="portrait-container">
-          <img src="../images/profile_image.jpg" alt="Profile Photo">
+          <img src="../images/profile_image.JPG" alt="Profile Photo">
         </div>
 
         <!-- about me description -->
