changed paragraphs into headings, added some meta tags

--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE HTML>
 <html lang="en">
   <head>
+    <!-- charset -->
     <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
     <title>Filippo Mazzalai: Full-Stack Website Developer</title>
     <meta name="description" content="Web developer portfolio website. Full stack-developer specialized in Javascript, React and Node JS. Check about my projects, my skills and more.">
     <meta name="author" content="Filippo Mazzalai">
 
+    <link rel="canonical" href="https://www.filippomazzalai.me" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- og graph metadata -->
@@ -19,6 +23,8 @@
     <link rel="manifest" href="./manifest.json">
 
     <!-- linking fonts and icons -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Condensed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/fontawesome-free-6.2.0-web/css/all.min.css">
 
@@ -50,8 +56,8 @@
     <main id="home">
       <div class="name-container">
         <div class="box">
-          <p>Hi! I am Filippo Mazzalai, a full-stack developer and tech enthusiast</p>
-          <p>Welcome to my portfolio</p>
+          <h1>Hello! I am Filippo Mazzalai, a full-stack developer and tech enthusiast</h1>
+          <h2>Welcome to my portfolio</h2>
         </div>
       </div>
 
