changed stylesheet links, added meta tags

--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -1,12 +1,19 @@
 <!DOCTYPE HTML>
 <html lang="en">
   <head>
+    <!-- charset -->
     <meta charset="UTF-8">
-    <title>Filippo Mazzalai: Full-Stack Website Developer</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+    <title>Filippo Mazzalai: About Me</title>
     <meta name="description" content="Web developer portfolio website. Full stack-developer specialized in Javascript, React and Node JS. Check about my projects, my skills and more.">
     <meta name="author" content="Filippo Mazzalai">
 
+    <link rel="canonical" href="https://www.filippomazzalai.me" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- robots config -->
+    <meta name="robots" content="noindex">
 
     <!-- og graph metadata -->
     <meta property="og:title" content="Filippo Mazzalai, web developer" />
@@ -19,13 +26,14 @@
     <link rel="manifest" href="../manifest.json">
 
     <!-- linking fonts and icons -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Condensed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/fontawesome-free-6.2.0-web/css/all.min.css">
 
     <!-- linking css styling files -->
     <link href="../styles/reset.css" rel="stylesheet" type="text/css">
     <link href="../styles/style.css" rel="stylesheet" type="text/css">
-    <link href="../styles/aboutme.css" rel="stylesheet" type="text/css">
 
     <!-- linking javascript -->
     <script src="../scripts/main.js" defer></script>
