--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <!-- charset -->
     <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="google-site-verification" content="PaahM93SsCXeUjcCCSm6k5DO-jsQK-zILE-zNGu6LNY" />
 
     <title>Filippo Mazzalai: Full-Stack Website Developer</title>
     <meta name="description" content="Web developer portfolio website. Full stack-developer specialized in Javascript, React and Node JS. Check about my projects, my skills and more.">
